<resources>
    <string name="app_name" translatable="false">Ej. Ap. 10 Navigation Drawer</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title" translatable="false">Víctor M. Rivas</string>
    <string name="nav_header_subtitle" translatable="false">vrivas@ujaen.es</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <string name="menu_home">Home</string>
    <string name="menu_gallery">Gallery</string>
    <string name="menu_slideshow">Slideshow</string>
    <string name="contact_us">Contact us</string>
    <string name="share">Share</string>
    <string name="contact_fragment">Contact fragment!!!</string>
    <string name="share_fragment">Share fragment!</string>
</resources>